yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: orders.cloudadventures.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: shipment-service
            port:
              number: 80
  tls:
    - hosts:
      - orders.cloudadventures.org
      secretName: orders-cloudadventures-org-tls
